Initial calculator lab2

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -8,6 +8,14 @@
         <servlet-name>Calculator</servlet-name>
         <url-pattern>/calculate.area</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>Calculator2</servlet-name>
+        <servlet-class>lab2.controller.Calculator</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Calculator2</servlet-name>
+        <url-pattern>/calculate2.area</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
